apis/deployments/topics/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: topics-api-service
spec:
  selector:
    app: topics-api
  ports:
  - port: 80
    targetPort: 80
